--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             </ul>
         </nav>
         <div class="banner">
-            <div>
-                <h3>Hi, I am</h3>
-                <h1>Mary Hardy</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+            <div class="banner-container">
+                <h3 class="banner-greeting">Hi, I am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-decision">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
                     behaved moments.</p>
                 <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
                 <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
@@ -44,7 +44,10 @@
 
     <!-- main-section-start -->
     <main>
-
+        <section class="about">
+            <h1 class="section-title">About</h1>
+            <p class="section-decision">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        </section>
     </main>
     <!-- main-section-end -->
 </body>
