--- a/index.html
+++ b/index.html
@@ -110,14 +110,87 @@
             <div class="resume-title">
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Education</h3>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                        <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                        <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                        <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
                 </div>
+
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Experience</h3>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Sr. Font End Developer</h2>
+                        <h3 class="resume-item-institute">Apple Inc / 2020 - Current</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Jr. Font End Developer</h2>
+                        <h3 class="resume-item-institute">Dribbble Inc / 2018 - 2022</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">HTML Developer</h2>
+                        <h3 class="resume-item-institute">Adobe Inc / 2017 - 2018</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
                 </div>
+            </div>
+            <div class="download-cv">
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download Cv</button>
             </div>
         </section>
     </main>
     <!-- main-section-end -->
+    <!-- footer section start -->
+    <footer>
+        <div class="footer-column">
+            <h2 class="section-title">Lets Connect</h2>
+            <p class="section-description">Please fill out the form on this section to contact with me or call between
+                9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="icon">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h2 class="section-title">Let’s Message me</h2>
+            <form class="contact" action="">
+                <input type="text" placeholder="Your Name">
+                <input type="text" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <input type="submit" value="submit">
+            </form>
+        </div>
+    </footer>
+    <!-- footer section end -->
 </body>
 
 </html>
